[improve][broker] Replace ConcurrentOpenHashMap with ConcurrentHashMap in Topic classes